--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: cng885@vt.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: cng885
   instagram:
   linkedin:
   pinterest:
