--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Chase Ginther
 description: Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: cng885.github.io/images/headshot.jpg
 
 #
 # Flags below are optional
